<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Status_Change_Activity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:background="@drawable/back"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.2"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_weight="1.8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/change_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changestatus"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginRight="3dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner_border"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down" />

        </RelativeLayout>


        <Button
            android:id="@+id/button_change_ststus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_ststus"
            android:layout_marginTop="40dp"

            android:background="@color/green"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dddd"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>



    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/acceptorder"
        android:layout_margin="40dp"/>

</LinearLayout>