<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcceptButton_activity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/bacckkk"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
           />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:layout_marginTop="10dp">

     <TextView
         android:id="@+id/ins_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/selectpicuptime"
         android:gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"/>


 </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"

            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Spinner
                android:visibility="gone"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:spinnerMode="dropdown"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timeRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp" />

            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down" />

        </RelativeLayout>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:visibility="gone"/>


        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Do you want to assign your rider ?"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp">

            <RadioGroup
                android:id="@+id/rgall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/rbyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:buttonTint="@color/red"/>

                <RadioButton
                    android:id="@+id/rbno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:buttonTint="@color/red"/>
            </RadioGroup>



            <LinearLayout
                android:visibility="gone"
                android:id="@+id/lldriverdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/spinner_border">

                <ImageView
                    android:id="@+id/imgdrive"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtdriver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtdrivernumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />



                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

        <EditText
            android:visibility="gone"
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/spinner_border"
            android:textColor="@color/black"
            android:gravity="top"
            android:hint="Enter your comment here"
            android:padding="7dp"/>

        <Button
            android:id="@+id/button_confirmorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:visibility="gone"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dddd"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>



    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/acceptorder"
        android:layout_margin="40dp"/>

</LinearLayout>